app is functioning correctly

--- a/src/components/Result/result.css
+++ b/src/components/Result/result.css
@@ -4,12 +4,12 @@
   color: rgb(13, 44, 113);
 }
 
-#col {
+.column {
   font-size: 25px;
   text-align: left;
 }
 
-#row {
+.row {
   text-align: left;
   font-size: 18px;
   padding: 8px;
