added readme and build

--- a/src/components/Result/result.css
+++ b/src/components/Result/result.css
@@ -3,7 +3,9 @@
     "Lucida Sans", Arial, sans-serif;
   color: rgb(13, 44, 113);
 }
-
+.search {
+  padding: 20px;
+}
 .column {
   font-size: 25px;
   text-align: left;
