--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,62 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+/* RESULT */
+
+.table {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  color: rgb(13, 44, 113);
+}
+.search {
+  padding: 20px;
+}
+.column {
+  font-size: 25px;
+  text-align: left;
+}
+
+.row {
+  text-align: left;
+  font-size: 18px;
+  padding: 8px;
+}
+.form-control {
+  width: 75%;
+  margin: 50px;
+  border: 2px solid rgb(218, 215, 215);
+  color: grey;
+  padding: 25px !important;
+  border-radius: 5px;
+  text-align: left;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 20px !important;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif !important;
+}
+/* HEADER */
+header {
+  position: relative;
+  background-image: linear-gradient(to right, lightslategrey, lightblue);
+  height: 50vh;
+  width: 100%;
+  overflow: hidden;
+}
+
+header .container {
+  position: relative;
+  z-index: 2;
 }
